# kbotop

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.ko.md  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
data/: tips.txt
docs/: demo.tape
src/: app.rs  config.rs  dateutil.rs  error.rs  lib.rs  main.rs  model.rs  poller.rs
src/source/: mod.rs  text.rs
src/source/naver/: dto.rs  map.rs  mod.rs
src/source/rss/: mod.rs  parse.rs
src/ui/: article.rs  footer.rs  games.rs  header.rs  help.rs  i18n.rs  live.rs  mod.rs  newslist.rs  options.rs  sideview.rs  standings.rs  strikezone.rs  teamlinks.rs  text.rs  theme.rs  tips.rs
tests/: parse_relay.rs  parse_schedule.rs  parse_standings.rs  ui_pipeline.rs
tests/fixtures/: news_article_144.json  relay_20260719KTLG.json  rss_quirks.xml  schedule_20260719.json  standings_2026.json
