[package]
name = "kbotop"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
description = "Watch KBO baseball from your terminal — live scoreboard & strike-zone pitch tracking, in the spirit of htop."
repository = "https://github.com/wantaekchoi/kbotop"
homepage = "https://github.com/wantaekchoi/kbotop"
license = "MIT"
readme = "README.en.md"
keywords = ["kbo", "baseball", "tui", "terminal", "scoreboard"]
categories = ["command-line-utilities"]
# crate 패키징 화이트리스트 — 내부 문서(docs/superpowers·adr·상태문서)가
# crate에 딸려 나가는 걸 차단한다(v0.1.x에서 유출됐던 리그레션 방지).
# 데모 gif·tests fixture도 제외해 crate를 가볍게 유지한다.
include = [
    "src/**",
    "data/tips.txt",
    "LICENSE",
    "README.md",
    "README.en.md",
    "CHANGELOG.md",
]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ureq = { version = "2.10", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
directories = "5"
anyhow = "1"
thiserror = "2"
signal-hook = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
# panic = "abort"를 켜지 않는다: poller.rs의 call_source()가 catch_unwind로 소스
# 호출 패닉을 흡수해 Update::Error로 바꾸는데, abort 하에서는 catch_unwind가
# 아무것도 잡지 못하고 프로세스가 그대로 죽는다(리뷰 라운드 5). unwind 유지가
# 이 방어선이 실제 배포 바이너리에서도 동작하기 위한 전제조건이다.
